--- a/index.html
+++ b/index.html
@@ -26,6 +26,10 @@
 <a class="btn btn-primary" href="asignar_variables_al_pdf.php">Asignar</a>
 </nav>
 
+<div class="container mt-5">
+<br>
+<h3 class="text-center mt-5">Editar PDF con FPDI (Pasar Variables PHP a un PDF con FPDI)</h3>  
+</div>
 
 
 
